<resources>
    <string name="app_name">Magic Cards</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="refresh">Refresh</string>
    <string name="nuevo_texto">Nuevo Texto</string>
    <string name="name">name</string>
    <string name="types">types</string>
    <string name="name2">Name</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Preferència de Rarity-->
    <string-array name="pref_rarity_list_values">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Mythic Rare</item>
        <item>Special</item>
        <item>Basic Land</item>
    </string-array>

    <string-array name="pref_rarity_list_titles">
        <item>Comú</item>
        <item>No comú</item>
        <item>Rar</item>
        <item>Rar Místic</item>
        <item>Especial</item>
        <item>De Territori Bàsic</item>
    </string-array>

    <string name="pref_title_rarity">Raresa</string>


    <!-- Preferència de Color-->
    <string-array name="pref_color_list_values">
        <item>Red</item>
        <item>Green</item>
        <item>Black</item>
        <item>Blue</item>
        <item>White</item>
    </string-array>

    <string-array name="pref_color_list_titles">
        <item>Vermell</item>
        <item>Verd</item>
        <item>Negre</item>
        <item>Blau</item>
        <item>Blanc</item>
    </string-array>

    <string name="pref_title_colors">Color</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="color">Color</string>
    <string name="rarity">Rarity</string>
    <string name="color1">Color</string>
    <string name="color4">Color</string>
    <string name="rarity4">Rarity</string>
    <string name="name4">Name</string>
    <string name="type4">Type</string>
    <string name="hello">Hello</string>
    <string name="color5">Color</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="color_detalle">Color detalle</string>
    <string name="rarity_detalle">Rarity detalle</string>
    <string name="text_detalle">Text detalle</string>
    <string name="titulo_detalle">Titulo detalle</string>
    <string name="resistencia_detalle">Resistencia detalle</string>
    <string name="type_detalle">Type detalle</string>
    <string name="fragment_list_view">fragment_list_view</string>
    <string name="fragment_detail">fragment_detail</string>

</resources>
