<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.a47276138y.cartas_magic.DetailActivityFragment"
        tools:showIn="@layout/activity_detail">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="140dp"
            android:layout_height="191dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:maxHeight="160dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_detalle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@+id/image_detail"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/type_detalle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/type_detail"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/image_detail"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <TextView
            android:text="@string/rarity_detalle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/rarity_detail"
            tools:layout_editor_absoluteX="156dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/type_detail" />

        <TextView
            android:text="@string/color_detalle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/color_detail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rarity_detail"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/image_detail"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp" />

        <TextView
            android:text="@string/resistencia_detalle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resistencia"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/image_detail"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/color_detail" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_detail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resistencia"
            android:text="@string/text_detalle"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/image_detail"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_marginBottom="8dp" />

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="212dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="212dp"
            tools:layout_editor_absoluteX="0dp" />

    </android.support.constraint.ConstraintLayout>
</layout>