<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/type4"
        android:layout_width="274dp"
        android:layout_height="22dp"
        android:id="@+id/type"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_editor_absoluteY="37dp" />

    <TextView
        android:text="@string/color4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/rarity"
        app:layout_constraintRight_toRightOf="@+id/rarity"
        app:layout_constraintLeft_toLeftOf="@+id/rarity"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:text="@string/rarity4"
        android:layout_width="274dp"
        android:layout_height="24dp"
        android:id="@+id/rarity"
        app:layout_constraintRight_toRightOf="@+id/type"
        app:layout_constraintLeft_toLeftOf="@+id/type"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:text="@string/name4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/name"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/img"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="93dp"
        app:srcCompat="@android:drawable/screen_background_light_transparent"
        android:id="@+id/img"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription=""
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08806262"
        tools:layout_editor_absoluteY="45dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="80dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="80dp" />
</android.support.constraint.ConstraintLayout>